Fix whitespace between posttags and footer

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -422,7 +422,7 @@ table th {
 
 .tags {
   text-align: center;
-  padding: 5px 0 20px 0;
+  padding: 5px 0 5px 0;
 }
 
 .clearit {
